Bug 31308 - Line Style drop-down shows nothing
Summary: Line Style drop-down shows nothing
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other Windows (All)
: medium blocker
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-01 17:27 UTC by Kohei Yoshida
Modified: 2012-05-04 01:41 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
patch to fix this (1.87 KB, patch)
2010-12-03 06:42 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2010-11-01 17:27:05 UTC
1. Insert tables.
2. While the cursor is inside a cell, you get a floating toolbar titled Table.
3. Click on Line Style.
4. No drop-down window is shown, but it should show a drop-down list of various border styles.

On Linux, using the latest development build, I can see the border style drop-down, but on Windows, using Beta2, none is shown.
Comment 1 Kohei Yoshida 2010-11-01 17:28:46 UTC
I believe this is Cedric's area?
Comment 2 Kohei Yoshida 2010-11-01 17:36:59 UTC
Also, The Arrow Style drop-down control in the toolbar doesn't display properly on Windows.  Insert a drawing object such as a simple rectangle, select it, then click on the arrow style control in the top toolbar.  It shows nothing.  On Linux, it shows a list of available arrowheads.
Comment 3 Kohei Yoshida 2010-11-04 11:11:39 UTC
Re-assigning to kendy.
Comment 4 Kohei Yoshida 2010-11-04 11:46:28 UTC
I think this is a blocker.
Comment 5 Kohei Yoshida 2010-11-26 08:01:41 UTC
Kendy.  This is definitely a blocker for 3.3.  Should someone else look into this?
Comment 6 Rainer Bielefeld Retired 2010-11-26 09:29:23 UTC
[Reproducible] with "LibreOffice 3.3.0Beta3 - WIN XP DE [OOO330m9 (build 3.2.99.3)]"; Table border line style and also line arrow style picker and Fontwork character distance picker do not work correctly, only appear for a nearby invisible short moment, then disappear.

Same Problems in DRAW.

Due to the current criteria it's not a blocker, but I believe that very ugly, very visible problems that might hold LibO up to ridicule should also be blockers.
Comment 7 Petr Mladek 2010-11-26 10:47:57 UTC
I think that it actually could fit the blocker bug criteria. It is broken functionality and it affects many users.

Kendy, is it related to your improvements to the toolbars and drop down menus or is it a generic windows bug? Anyway, I add Tor to CC.
Comment 8 Petr Mladek 2010-11-29 08:26:33 UTC
Strange, I see the problem only with this partucular toolbar menu. The others seems to work. I wonder what is different here.
Comment 9 Kohei Yoshida 2010-12-02 12:02:24 UTC
I'm looking into it right now as others are all tied up with something else.
Comment 10 Kohei Yoshida 2010-12-02 12:23:34 UTC
The key commit to be aware of

http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=46ea2f6cb38536aa1b1a259af2145a581e19f6e8

where the WB_STDPOPUP flag is used for the new and improved popup style, but somehow that is not working with several of the popups.  My plan is to see how this is affecting those few popups and come up with a fix (hopefully).
Comment 11 Kohei Yoshida 2010-12-02 22:52:27 UTC
Ah, I think I got it.  I'll clean up my code and attach my solution for a review tomorrow.
Comment 12 Kohei Yoshida 2010-12-02 22:56:05 UTC
From the looks of the code, our change with the popup improvement exposed the pre-existing bug.  Needless to say the fix is very simple.
Comment 13 Kohei Yoshida 2010-12-03 06:42:57 UTC
Created attachment 40776 [details]
patch to fix this

This change fixes this.  The change is trivial, and looks safe to me.
Comment 14 Jan Holesovsky 2010-12-03 07:03:26 UTC
Kohei: Great catch, thank you for that!  Looks good, please push.
Comment 15 Kohei Yoshida 2010-12-03 07:11:28 UTC
Done!

http://cgit.freedesktop.org/libreoffice/libs-core/commit/?h=libreoffice-3-3&id=969cac7c1792f3a22f589db1baff3919a90820d5

Given the old code, actually I'm surprised that this even worked at all on Linux.
Comment 16 sophie 2011-01-13 02:42:26 UTC
Verified - Closed - Sophie
Comment 17 Roman Eisele 2012-05-04 00:48:22 UTC
This is a Writer issue, therefore changed 'Component' accordingly.
Added Version according to original description.
Abbreviated Summary ('Writer:' is no longer necessary thanks to Component field).