Fix failed popup launches on Windows.

These two popup windows failed to grab focus when launched, which
would cause them to immediately quit after launch.  The old code
passed a BOOL argument where a popup launch flag was expected.
This looks like an existing bug to me. (fdo#31308)